z-index 1000, resolvendo problema de overflow

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
     -webkit-backdrop-filter: blur( 4px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    z-index: 1000;
 }
 
 .links {
